WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154918
REGRESSION(
r197409
): [GTK] Web process always crashes on WebPage construction after
r197409
https://bugs.webkit.org/show_bug.cgi?id=154918
Summary
REGRESSION(r197409): [GTK] Web process always crashes on WebPage construction...
Carlos Garcia Campos
Reported
2016-03-02 09:15:36 PST
We have an incorrect check in DrawingAreaImpl constructor that has never actually worked because it uses the page settings before they were initialized. But that has been fixed in
r197409
and now we are always forcing accelerated compositing mode incorrectly, because m_alwaysUseCompositing is set in the constructor and never changed again.
Attachments
Patch
(3.68 KB, patch)
2016-03-02 09:21 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Patch
(3.79 KB, patch)
2016-03-02 09:24 PST
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-03-02 09:21:31 PST
Created
attachment 272658
[details]
Patch Please, review this, *all* the tests in our bots are currently broken
Carlos Garcia Campos
Comment 2
2016-03-02 09:24:42 PST
Created
attachment 272659
[details]
Patch Sorry, I submitted the wrong patch by mistake.
Carlos Garcia Campos
Comment 3
2016-03-02 09:59:32 PST
Committed
r197452
: <
http://trac.webkit.org/changeset/197452
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug